[tool.poetry]
name = "fabproj-manager"
version = "0.1.4"
description = ""
authors = ["Devin Lane <silvertenor@icloud.com>"]
readme = "README.md"
packages = [{include = "fabproj_manager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
nbformat = "^5.7.3"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fabproj = "fabproj_manager.fabproj:create_project"
